# TraceGraph

./: Makefile  README.md  index.html  pyproject.toml
data/: jira_export.json  notion_export.json  slack_export.json
examples/: run_demo.py
tests/: conftest.py  test_graph.py  test_normalize.py  test_trajectory.py
tracegraph/: __init__.py  cli.py  graph.py  models.py  normalize.py  pipeline.py  trajectory.py
tracegraph/connectors/: __init__.py  base.py  jira.py  notion.py  slack.py
